--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <properties>
-    <java.version>10</java.version>
+    <java.version>1.8</java.version>
   
    <slf4j.version>1.7.5</slf4j.version>
     <log4j.version>1.7.5</log4j.version>
@@ -59,8 +59,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-       	<target>1.8</target>
-        <source>1.8</source>
+       	<target>${java.version}</target>
+        <source>${java.version}</source>
         </configuration>
       </plugin>
     </plugins>
